--- a/main/resources/configuration.properties
+++ b/main/resources/configuration.properties
@@ -1,6 +1,7 @@
 app.url=http://przyklady.javastart.pl/jpetstore/
-
-local.browser=CHROME
+is.remote.run=true
+grid.url=http://192.168.56.1:4444/wd/hub
+browser=CHROME
 chrome.driver.location=C:/drivers/chromedriver.exe
 firefox.driver.location=C:/drivers/geckodriver.exe
 ie.driver.location=C:/drivers/IEDriverServer.exe
