--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,6 +1,6 @@
 app.url=http://przyklady.javastart.pl/jpetstore/
-is.remote.run=false
-grid.url=http://192.168.56.1:4444/wd/hub
+is.remote.run=true
+grid.url=http://localhost:4444/wd/hub
 browser=CHROME
 chrome.driver.location=C:/drivers/chromedriver.exe
 firefox.driver.location=C:/drivers/geckodriver.exe
